# rtrace

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Cargo.toml  README.md  build.rs
example/: some_import.py  stage.py
misc/syscalls/: parsed_syscalls.json  print_syscall.py  syscall.list  syscall_list.json
src/: bindings.rs  command.rs  command_ext.rs  enhanced_tracer.rs  event.rs  fs.rs  lib.rs  main.rs  paths.rs  process.rs  ptrace.c  raw.rs  syscall_tracer.rs  util.rs  wait_pid.rs
src/enhanced_tracer/: mod.rs
src/enhanced_tracer/syscall_defs/: mod.rs  syscall_args.rs  syscall_defs_enter.rs  syscall_defs_exit.rs
tests/: .gitignore  syscalls.rs
