[package]
name = "dry"
version = "0.1.0"
authors = ["Moritz Wanzenböck <moritz.wanzenboeck@catalysts.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dry"
path = "src/lib.rs"

[[bin]]
name = "dry"
path = "src/main.rs"

[dependencies]
slog = "2.5"
slog-term = "2.5"
slog-async = "2.4"
libc = "0.2"
