[package]
name = "dry"
version = "0.1.0"
authors = ["Moritz Wanzenböck <moritz.wanzenboeck@catalysts.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dry"
path = "src/lib.rs"

[[bin]]
name = "dry"
path = "src/main.rs"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
md-5 = "0.8"
hex = "0.4"
