[package]
name = "rtrace"
version = "0.1.0"
authors = ["Moritz Wanzenböck <moritz@wanzenbug.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rtrace"
path = "src/lib.rs"

[[bin]]
name = "dry"
path = "src/bin/dry.rs"
required-features = ["dry"]

[[bin]]
name = "rtrace"
path = "src/bin/rtrace.rs"
required-features = ["rtrace"]

[features]
dry = ["pretty_env_logger", "md-5", "serde", "serde_yaml", "serde_json", "hex"]
rtrace = ["pretty_env_logger"]

[dependencies]
log = "0.4"
libc = "0.2"
once_cell = "1.3"

pretty_env_logger = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml = { version = "0.8", optional = true }
serde_json = { version = "1.0", optional = true }
md-5 = { version = "0.8", optional = true }
hex = { version =  "0.4", optional = true }

[dev-dependencies]
cc = "1.0"
sha2 = "0.8"
hex = "0.4"